--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ subjects:
 - !lcsh 'Man-woman relationships -- Fiction'
 - !lcsh 'Artists -- Fiction'
 - !lcc 'PS'
+- GITenberg
 title: 'Cape of Storms: A Novel'
 url: http://www.gutenberg.org/ebooks/39781
